fix image builds for watcher and remove update script
Signed-off-by: Avinal Kumar <avinal@redhat.com>

--- a/.tekton/tekton-results-api-push.yaml
+++ b/.tekton/tekton-results-api-push.yaml
@@ -19,13 +19,15 @@ spec:
       value: "quay.io/redhat-appstudio/tekton-results-api:{{revision}}"
     - name: dockerfile
       value: images/api/Dockerfile
-    - name: infra-deployment-update-script
-      value: |
-        sed -i -e 's/\(newTag: \).*/\1{{ revision }}/' components/pipeline-service/tekton-results/kustomization.yaml
   pipelineRef:
     name: docker-build
     bundle: quay.io/redhat-appstudio/hacbs-core-service-templates-bundle:latest
   workspaces:
     - name: workspace
-      persistentVolumeClaim:
-        claimName: app-studio-default-workspace
+      volumeClaimTemplate:
+        spec:
+          accessModes:
+            - ReadWriteOnce
+          resources:
+            requests:
+              storage: 1Gi
