STONEBLD-777 - tekton-ci: update bundle
Switching to new bundle since development of old one was stopped before
attempt to migrate to kcp. New bundle is removing dependency on shared
secret.

This requires to install https://github.com/apps/red-hat-appstudio-ci-cd

--- a/.tekton/tekton-results-update-pipeline-service.yaml
+++ b/.tekton/tekton-results-update-pipeline-service.yaml
@@ -41,5 +41,5 @@ spec:
           - name: GITHUB_APP_INSTALLATION_ID
             value: "28617334"
         taskRef:
-          bundle: quay.io/redhat-appstudio/appstudio-tasks:748a03507b68aa610212e8031e3301ab943a14ef-2
+          bundle: quay.io/redhat-appstudio-tekton-catalog/task-update-infra-deployments:0.1
           name: update-infra-deployments
