--- a/config/base/kustomization.yaml
+++ b/config/base/kustomization.yaml
@@ -22,6 +22,13 @@ resources:
 - config-leader-election.yaml
 - config-logging.yaml
 - config-observability.yaml
+
+patches:
+  - path: migrator.yaml
+    target:
+      kind: Deployment
+      name: api
+
 configMapGenerator:
   # Create a ConfigMap containing the API configs.
   - name: api-config
