add unique target for migrator patch
Signed-off-by: Satyam Bhardwaj <sabhardw@redhat.com>

--- a/config/base/kustomization.yaml
+++ b/config/base/kustomization.yaml
@@ -25,6 +25,9 @@ resources:
 
 patches:
   - path: migrator.yaml
+    target:
+      kind: Deployment
+      name: api
 
 configMapGenerator:
   # Create a ConfigMap containing the API configs.
